--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
+    "fs-extra": "^11.3.3",
+    "helmet": "^8.1.0",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "pdf-lib": "^1.17.1",
+    "sharp": "^0.34.5",
+    "uuid": "^13.0.0"
   }
 }
