--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "pdf-lib": "^1.17.1",
-    "sharp": "^0.34.5",
-    "uuid": "^13.0.0"
+    "sharp": "^0.34.5"
   }
 }
