--- a/vercel.json
+++ b/vercel.json
@@ -6,16 +6,6 @@
             "use": "@vercel/node"
         }
     ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/api/index.js"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/api/index.js"
-        }
-    ],
     "headers": [
         {
             "source": "/api/(.*)",
@@ -48,12 +38,18 @@
                 {
                     "key": "Access-Control-Allow-Origin",
                     "value": "https://image-resize-navy.vercel.app"
-                },
-                {
-                    "key": "Access-Control-Allow-Methods",
-                    "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
                 }
             ]
+        }
+    ],
+    "rewrites": [
+        {
+            "source": "/api/(.*)",
+            "destination": "/api/index.js"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/api/index.js"
         }
     ]
 }
