--- a/.env
+++ b/.env
@@ -1,2 +1,15 @@
 ﻿PORT=5000
 NODE_ENV=development
+
+# MongoDB Configuration
+MONGODB_URI=mongodb+srv://trypixora_db_user:sATIwgR9jsvzbnOI@cluster0.aimdua8.mongodb.net/imageresize?retryWrites=true&w=majority
+
+# JWT Configuration
+JWT_SECRET=yjncjecbeuihiuewhuij438943493fffhuewncjnwnkjnwec393
+JWT_EXPIRE=7d
+JWT_REFRESH_EXPIRE=30d
+
+# Admin Credentials (for seeding)
+ADMIN_EMAIL=admin@imageresize.com
+ADMIN_PASSWORD=Admin123!
+ADMIN_NAME=Admin User
