--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
     "fs-extra": "^11.3.3",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.5",
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "pdf-lib": "^1.17.1",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "slugify": "^1.6.6"
   }
 }
